--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,3 @@
 [submodule "Carthage/Checkouts/SwiftyJSON"]
+	path = Carthage/Checkouts/SwiftyJSON
 	url = https://github.com/SwiftyJSON/SwiftyJSON.git
